--- a/doc/02-容器下.md
+++ b/doc/02-容器下.md
@@ -129,7 +129,7 @@ public class IOCTest_Aop {
 
 **注意：JoinPoint 这个参数一定要出现在参数表的第一位，后面则出错。**
 
-#### 2、案例总结为三步：
+#### 2、案例总结为三步
 
 1、业务逻辑组件和切面类都加入到容器中，告诉 Spring 哪个是 切面类 @Aspect
 
@@ -137,11 +137,11 @@ public class IOCTest_Aop {
 
 3、开启基于注解的 AOP 模式
 
-#### 3、@EnableAspectJAutoProxy 
+#### 3、@EnableAspectJAutoProxy 注解的作用
 
 AOP原理【给容器中注册了什么组件，这个组件什么时候 工作，这个组件的功能是什么】
 
-1，是什么？
+##### 1，是什么？
 
 ```java
 @Target(ElementType.TYPE)
@@ -196,7 +196,7 @@ private static BeanDefinition registerOrEscalateApcAsRequired(Class<?> cls, Bean
 }
 ```
 
-2、AnnotationAwareAspectjAutoProxyCreator
+##### 2、AnnotationAwareAspectjAutoProxyCreator
 
 AnnotationAwareAspectjAutoProxyCreator
 
@@ -313,13 +313,11 @@ LogAspect 创建断点
 
 ​			2），doCreateBean，真正的创建一个 bean实例，和 3.6 过程一样
 
-​			3），
 
 
+AnnotationAwareAspectjAutoProxyCreator 【InstantiationAwareBeanPostProcessor】作用
 
-
-
-AnnotationAwareAspectjAutoProxyCreator 【InstantiationAwareBeanPostProcessor】作用是在1、每一个 bean 创建之前调用 postProcessBeforeInstantiation
+1、每一个 bean 创建之前调用 postProcessBeforeInstantiation
 
 ​	关心 MathCalculator 和 LogAspect 的创建
 
@@ -412,7 +410,7 @@ protected Object createProxy(
 
 
 
-代理对象的目标方法执行流程：
+##### 3、代理对象的目标方法执行流程
 
 容器中保存了组件的代码对象，cglib 增强后的对象，这个对象里面保存了详细信息
 
@@ -440,7 +438,7 @@ protected Object createProxy(
 
 ![](pics\05-Aop增强代码部分执行流程.png)
 
-总结：
+##### 4、总结
 
 1），@EnableAspectJAutoProxy  开启 AOP 功能
 
@@ -586,7 +584,7 @@ public class IOCTest_Tx {
     }
 ```
 
-#### 2、希望给 Dao 事务运行，失败回滚。
+#### 2、给 Dao 添加事务支持，失败回滚
 
 给方法上标准 @Transactional 标识当前当前事务执行
 
