ext: Context fresh

--- a/doc/03-扩展原理.md
+++ b/doc/03-扩展原理.md
@@ -1,4 +1,4 @@
-### 一、@BeanFactoryPostProcessor
+###  一、@BeanFactoryPostProcessor
 
 ```java
 /**
@@ -492,4 +492,284 @@ Spring 容器的 refresh() 创建和刷新
 
 =================BeanFactory 的创建和预准备==================
 
-5、invokeBeanFactoryPostProcessors(beanFactory);
+5、invokeBeanFactoryPostProcessors(beanFactory); 执行 BeanFactoryPostProcessor 的方法
+
+​	BeanFactoryPostProcessor：BeanFactory 的后置处理器，在 BeanFactory 标准初始化之后执行的
+
+​	两个接口：BeanFactoryPostProcessor、BeanDefinitionRegistryPostProcessor
+
+​	1）、执行 BeanFactoryPostProcessor 的方法
+
+​		BeanDefinitionRegistryPostProcesser 部分
+
+​		1）获取所有 BeanDefinitionRegistryPostProcesser
+
+​			beanFactory.getBeanNamesForType(BeanDefinitionRegistryPostProcessor.class...);
+
+​		2）先执行实现了 PriorityOrdered 优先级接口的BeanDefinitionRegistryPostProcesser
+
+​			postProcessor.postProcessBeanDefinitionRegistry(registry);
+
+​		3）再执行实现了 Ordered 顺序接口的 BeanDefinitionRegistryPostProcesser
+
+​			postProcessor.postProcessBeanDefinitionRegistry(registry);
+
+​		4）最后执行没有实现任何优先级或者顺序接口的 BeanDefinitionRegistryPostProcesser
+
+​			postProcessor.postProcessBeanDefinitionRegistry(registry);
+
+​		5）执行当前找到的是 BeanFactoryPostProcesser 的 BeanDefinitionRegistryPostProcesser 的方法
+
+​			invokeBeanFactoryPostProcessors(registryProcessors, beanFactory);
+
+​			invokeBeanFactoryPostProcessors(regularPostProcessors, beanFactory);
+
+​		再执行 BeanFactoryPostProcesser（过滤掉上面过程中已经执行过的 BeanFactoryPostProcesser）
+
+​		1）获取所有的 BeanFactoryPostProcesser
+
+​			beanFactory.getBeanNamesForType(BeanFactoryPostProcessor.class,
+
+​		2）先执行实现了 PriorityOrdered 优先级接口的 BeanFactoryPostProcesser
+
+​		3）再执行实现了 Ordered 顺序接口的 BeanFactoryPostProcesser
+
+​		4）最后执行没有实现任何优先级或者顺序接口的 BeanFactoryPostProcesser
+
+6、registerBeanPostProcessors() 注册 BeanPostProcessor（Bean 的后置处理器）拦截 Bean 的创建过程（执行前后都会进行判断）
+
+​	不同接口类型的 BeanPostProcessor，在 Bean 创建前后的执行时机不一样
+
+​	BeanPostProcessor
+
+​	DestructionAwareBeanPostProcessor
+
+​	InstantiationAwareBeanPostProcessor
+
+​	SmartInstantiationAwareBeanPostProcessor 
+
+​	MergedBeanDefinitionPostProcessor【internalPostProcessors】
+
+​	1）获取所有的 BeanPostProcessor；后置处理器都默认可以有 PriorityOrderd、Ordered 指定优先级
+
+​	2）先注册 PriorityOrdered 优先级接口的 BeanPostProcessor
+
+​		把每一个 BeanPostProcessor 添加到 BeanFactory 中
+
+​		registerBeanPostProcessors(beanFactory, priorityOrderedPostProcessors);
+
+​	3）再注册 Ordered 接口的
+
+​		registerBeanPostProcessors(beanFactory, orderedPostProcessors);
+
+​	4）最后注册没有实现任何优先级接口的
+
+​		registerBeanPostProcessors(beanFactory, nonOrderedPostProcessors);
+
+​	5）最终，再次注册 MergedBeanDefinitionPostProcessor【第一次注册时在 priorityOrderedPostProcessors 注册的时候】
+
+​		registerBeanPostProcessors(beanFactory, internalPostProcessors);
+
+​	6）注册一个 ApplicationListenerDetector 监听器探测器，在 Bean 创建完成后检查是否是 ApplicationListener，是的话将该 bean 加入到容器中
+
+```java
+class ApplicationListenerDetector implements DestructionAwareBeanPostProcessor, MergedBeanDefinitionPostProcessor {
+    ...
+@Override
+public Object postProcessAfterInitialization(Object bean, String beanName) {
+   if (this.applicationContext != null && bean instanceof ApplicationListener) {
+      // potentially not detected as a listener by getBeanNamesForType retrieval
+      Boolean flag = this.singletonNames.get(beanName);
+      if (Boolean.TRUE.equals(flag)) {
+         // singleton bean (top-level or inner): register on the fly
+         this.applicationContext.addApplicationListener((ApplicationListener<?>) bean);
+      }
+       ...
+   }
+```
+
+7、initMessageSource(); 初始化 MessageSource组件（国家化功能，消息绑定，消息解析）
+
+​	1）获取 BeanFactory
+
+​	2）看容器中是否有 id 为 messageSource 的组件
+
+​		若有，赋值给 messageSource 属性
+
+​		若没有，自己创建一个 DelegatingMessageSource
+
+​			MessageSource，取出国际化配置文件中的某个 key  的值，需要按照区域信息获取
+
+​			protected String formatMessage(String msg, Object[] args, Locale locale) {}
+
+​	3）把 messageSource 注册到容器中，以后获取国际化配置文件的值的时候，可以自动注入 MessageSource
+
+​			beanFactory.registerSingleton(MESSAGE_SOURCE_BEAN_NAME, this.messageSource);
+
+8、initApplicationEventMulticaster() 初始化事件派发器
+
+​	1）拿到 BeanFactory 
+
+​	2）从 BeanFactory 中获取 中 id 为 applicationEventMulticaster 的 ApplicationEventMulticaster
+
+​	3）如果上一步没有获取到，就创建 SimpleApplicationEventMulticaster
+
+​	4）创建的派发器注册到 BeanFactory，以后使用可以直接从容器中获取
+
+9、onRefresh();留给子容器（子类）
+
+​	1）子类重写这个方法，在重启刷新的时候，可以自定义逻辑
+
+10、registerListeners(); 给容器中将所有的项目里面的 ApplicationListener 注册进来
+
+​	1）从容器中拿到所有的 ApplicationListener 组件
+
+​		getBeanNamesForType(ApplicationListener.class, true, false);
+
+​	2）将每个监听器添加到事件派发器中
+
+​		getApplicationEventMulticaster().addApplicationListenerBean(listenerBeanName);
+
+​	3）派发 之前步骤产生的事件
+
+11、finishBeanFactoryInitialization(beanFactory); 初始化所有剩下的单实例 bean
+
+​	1）初始化剩下的单实例 beanFactory.preInstantiateSingletons();
+
+​		1）获取容器中的所有 bean，依次进行初始化和创建对象
+
+​		2）获取 bean 的定义信息，RootBeanDefinition
+
+​		3）bean 不是抽象的、不是懒加载、是单实例的
+
+​			1）判断是否是 FactoryBean，是否是实现 FactoryBean 接口的 Bean
+
+​			2）如果不是工厂 Bean，使用 getBean 创建对象
+
+​				1）、getBean(beanName); ioc.getBean() ；
+
+​				2）、doGetBean(name, null, null, false);
+
+​				3）、先获取缓存中保存的单实例 bean，如果能获取到，说明这个 Bean 之前被创建过，所有创建过的单实例 bean 都会被缓存起来 
+
+​					 getSingleton(beanName);
+
+​					Object sharedInstance = getSingleton(beanName);
+
+​				4）、缓存中获取不到，开始 Bean 的创建对象流程
+
+​				5）、做一些检查后，markBeanAsCreated(beanName) 标记当前 Bean 已经被创建（防止创建多个）
+
+​				6）、获取 Bean 定义信息
+
+​				7）、获取当前 Bean 依赖的其他 Bean，如果有，按照 getBean 的方法把依赖的 Bean 创建出来 String[] dependsOn = mbd.getDependsOn();
+
+​				8）、启动单实例 Bean 的创建流程
+
+​					1）createBean() 创建Bean
+
+​					2）Object bean = resolveBeforeInstantiation(beanName, mbdToUse); 让 BeanPostProcessor 先拦截返回代理对象
+
+​						InstantiationAwareBeanPostProcessors
+
+​						先触发 applyBeanPostProcessorsBeforeInstantiation(targetType, beanName);
+
+​						如果有返回值（返回值是处理后的代理对象），触发 postProcessAfterInstination（短路）
+
+​					3）如果前面 InstantiationAwareBeanPostProcessors 处理没有返回代理对象
+
+​					4）调用 doCreateBean 创建 Bean
+
+​						1）【创建 Bean 实例】 createBeanInstance(beanName, mbd, args)；利用工厂方法或者构造器创建出 bean 实例
+
+​						2）【调用 applyMergedBeanDefinitionPostProcessors 的方法】
+
+​							调用 bdp.postProcessMergedBeanDefinition(mbd, beanType, beanName) 的方法
+
+​						3）【Bean 属性赋值 】populateBean(beanName, mbd, instanceWrapper)
+
+​							赋值之前：
+
+​							1）、拿到 InstantiationAwareBeanPostProcessors 后置处理器，执行方法ibp.postProcessAfterInstantiation(bw.getWrappedInstance(), beanName)
+
+​							~~2）、拿到 InstantiationAwareBeanPostProcessors 后置处理器，执行方法~~
+
+​							===========赋值之前=============
+
+​							3）、应用 Bean 属性的值，为属性里用 setter 方法等进行赋值；Autowire 赋值，
+
+​						4）【Bean初始化】 initializeBean(beanName, exposedObject, mbd);
+
+​							1）、【执行 aware 接口的方法】invokeAwareMethods(beanName, bean);
+
+​									BeanNameAware\BeanClassLoaderAware\BeanFactoryAware
+
+​							2）、 【执行后置处理器初始化之前的方法】beanProcessor.postProcessBeforeInitialization(result, beanName);
+
+​							3）、【执行初始化方法】invokeInitMethods(beanName, wrappedBean, mbd);
+
+​								1）、是否是 InitializingBean 的接口实现，执行初始化 afterPropertiesSet()
+
+​								2）、看是否自定义初始化方法 （init 方法）invokeCustomInitMethod(beanName, bean, mbd)
+
+​							4）、【执行后置处理器初始化之后的方法】beanProcessor.postProcessAfterInitialization(result, beanName)
+
+​						5）**注册** Bean 的销毁方法 registerDisposableBeanIfNecessary(beanName, bean, mbd);
+
+​								1）、是否是 DisposableBean的接口实现，注册销毁
+
+​								2）、看是否自定义销毁方法 （destroy 方法）注册
+
+​					5）将创建 bean 的添加到缓存中 singletonObjects
+
+​						IOC 容器就是这些 Map，Map 中保存了单实例 Bean，环境信息...
+
+​				4）所有 Bean 都是用 getBean 创建完成之后，检查所有的 Bean 是否是 SmartIni 接口的，如果是，就执行接口规定的方法
+
+12）finishRefresh();完成 BeanFactory 的初始化创建工作，IOC 容器创建完成
+
+​	1）初始化和声明周期有关的后置处理器 LifecycleProcessor，默认从容器中找是否有 该生命周期组件，若没有，创建 DefaultLifecycleProcessor 组件并注册到容器中
+
+​		LifecycleProcessor 允许自定义实现类，作用是可有在 BeanFactory 的 onRefresh()，onClose()处进行拦截
+
+​	2）拿到生命周期处理器回调 onRefresh() 方法 拿到前面定义的 LifecycleProcessor 执行
+
+​	3）发布 容器刷新完成事件 
+
+​			拿到派发器，将所有 ApplicationListener 执行一遍
+
+​	4）注册 LiveBeansView 没有配置 mbeanDomain 的话没有作用
+
+================总结================
+
+1、Spring 容器启动的时候，先会保存注册进来的 Bean 定义信息
+
+​	1）XML 注册 Bean <Bean>
+
+​	2）注册注册 @Bean @Service @Component
+
+2、Spring 容器会在合适的时机创建这些 Bean
+
+​	1）用到这个 bean 的时候，利用 getBean 方法创建 bean，创建好之后保存到容器中
+
+​	2）统一创建剩下所有 bean 的时候
+
+3、后置处理器 BeanPostProcessor
+
+​	每一个 bean 创建完成，都会使用各种后置处理器进行处理，来增强这个 bean 的功能
+
+​		AutowiredAnnotationBeanPostProcessor 处理自动注入
+
+​		AnnotationAwareAspectJAutoProxyCreator 为 bean 创建代理对象，做 AOP 功能
+
+​		AsyncAnnotationBeanPostProcessor 处理异步任务
+
+​        ScheduledAnnotationBeanPostProcessor
+
+​		增强功能注解
+
+4、Spring 的事件驱动模型
+
+​	ApplicationListener 事件监听
+
+​	ApplicationEvenMulticaster 事件派发 
