ext: springmvc annotation

--- a/doc/03-扩展原理.md
+++ b/doc/03-扩展原理.md
@@ -448,7 +448,7 @@ public class MyEventListner {
 
 ### 四、Spring 创建容器过程
 
-Spring 容器的 refresh() 创建和刷新
+#### 1、Spring 容器的 refresh() 创建和刷新
 
 1、prepareRefresh 预处理工作 
 
@@ -741,6 +741,8 @@ public Object postProcessAfterInitialization(Object bean, String beanName) {
 ​	4）注册 LiveBeansView 没有配置 mbeanDomain 的话没有作用
 
 ================总结================
+
+#### 2、总结
 
 1、Spring 容器启动的时候，先会保存注册进来的 Bean 定义信息
 
